--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <title>todolist</title>
     <link rel="stylesheet" href="style/main.css">
 </head>
-<header>  
+<header class="container"> 
+    <div class="header top"> </div>
 <img src="img/Logo.png" alt="Logo">
-<h1>Toboolist</h1>
+<h1 id="logo">Toboolist</h1>
+<main>
+<div class="box"> 
+    
+    
+    <div class="box alternative"> 
+        <input class="button" id="addtask" type="button" value="add-task">
+        <input class="button" id="add-section" type="button" value="add-section">
+        </div>
+
+</main>
+
+
+
+
 </header>
 </html>
